--- a/src/views/about.ejs
+++ b/src/views/about.ejs
@@ -1,10 +1,20 @@
 <%- include('includes/header'); -%>
 
-<main class="page page__about">
+<main class="page page__view">
   <div class="row">
-    <h1>About HackerFlix</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin convallis sodales gravida. Sed sem sapien, ultrices eu nulla a, dapibus consectetur neque. Ut congue dui a enim posuere sagittis. Donec at urna non ipsum faucibus aliquet a a lectus. Sed pellentesque aliquet orci, eu bibendum orci laoreet eget. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec eu mattis elit, at dignissim lorem. Donec cursus nisi sed dui viverra, eu sodales dolor mattis. Mauris id vehicula ex.</p>
-    <p>Praesent fermentum tincidunt metus eget maximus. Curabitur ut porta metus. Quisque convallis dignissim purus, eget aliquam dolor vestibulum vel. In porta, dui quis ullamcorper rutrum, ex quam condimentum sem, non imperdiet velit arcu nec nulla. Etiam dictum sed ex et dignissim. Sed sed felis lorem. Sed convallis condimentum lacus, in ultrices mauris dignissim vitae. Nullam ac porttitor massa.</p>
+    <div class="details-section">
+      <p class="details-section__tagline">
+        This project is under active development. More info coming soon!
+      </p>
+    </div>
+    <div class="details-section">
+      <h1 class="details-section__heading">📺 About HackerFlix</h1>   
+      <p>HackerFlix is a curated directory of documentaries, docuseries, movies, and tv shows about hacking, technology, and Internet culture. Most of the imagery and data is provided via <a href="https://www.themoviedb.org/" target="_blank">The Movie DB</a>.</p>
+    </div>
+    <div class="details-section">
+      <h1 class="details-section__heading">👋 Contributors Welcome</h1>   
+      <p>Have a film to add to the directory? Or want to help with development? Please <a href="https://www.6rian.com/whois/" target="_blank">reach out</a>!</p>
+    </div>  
   </div>
 </main>
 
