--- a/src/views/includes/footer.ejs
+++ b/src/views/includes/footer.ejs
@@ -1,7 +1,13 @@
     <footer class="site-footer">
       <div class="site-footer__attribution">
-        <div>Powered by:</div>
-        <a href="https://www.themoviedb.org/"><img src="https://www.themoviedb.org/assets/2/v4/logos/v2/blue_long_1-8ba2ac31f354005783fab473602c34c3f4fd207150182061e425d366e4f34596.svg" /></a>
+        <div class="site-footer__attribution-source">
+          <div>Powered by:</div>
+          <a href="https://www.themoviedb.org/" target="_blank"><img src="https://www.themoviedb.org/assets/2/v4/logos/v2/blue_long_1-8ba2ac31f354005783fab473602c34c3f4fd207150182061e425d366e4f34596.svg" /></a>
+        </div>
+        <div class="site-footer__attribution-source">
+          <div>Built and Maintained by:</div>
+          <a href="https://6rian.com/" class="nav-menu__link" target="_blank">6rian.com</a>
+        </div>        
       </div>
       <ul class="site-footer__nav">
         <li><a href="/" class="nav-menu__link">Home</a></li>
