feat: more about page tweaks

--- a/src/views/about.ejs
+++ b/src/views/about.ejs
@@ -9,11 +9,11 @@
     </div>
     <div class="details-section">
       <h1 class="details-section__heading">📺 About HackerFlix</h1>   
-      <p>HackerFlix is a curated directory of documentaries, docuseries, movies, and tv shows about hacking, technology, and Internet culture. Most of the imagery and data is provided via <a href="https://www.themoviedb.org/" target="_blank">The Movie DB</a>.</p>
+      <p>HackerFlix is a curated directory of documentaries, docuseries, movies, and tv shows about computers, hacking, technology, privacy, cyberpunk and Internet culture. Most of the imagery and data is provided via <a href="https://www.themoviedb.org/" target="_blank">The Movie DB</a>.</p>
     </div>
     <div class="details-section">
       <h1 class="details-section__heading">👋 Contributors Welcome</h1>   
-      <p>Have a film to add to the directory? Or want to help with development? Please <a href="https://www.6rian.com/whois/" target="_blank">reach out</a>!</p>
+      <p>Have a recommendation to add to the directory? Or want to help with <a href="https://github.com/6rian/hackerflix" target="_blank">development</a>? Please <a href="https://www.6rian.com/whois/" target="_blank">reach out</a>!</p>
     </div>  
   </div>
 </main>
