--- a/src/views/includes/footer.ejs
+++ b/src/views/includes/footer.ejs
@@ -20,5 +20,12 @@
     </footer>
     <script src="/bundle.js"></script>
     <script>window.client.init(window.viewLocals.view);</script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-4Z9HEKLB7C"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-4Z9HEKLB7C');
+    </script>    
   </body>
 </html>
