feat: make cards open in new tab

--- a/client/css/pages/index-page.scss
+++ b/client/css/pages/index-page.scss
@@ -115,6 +115,10 @@
       }
     }
 
+    &:visited {
+      color: $primary-text-color-inverted;
+    }
+
     &-poster {
       background-size: cover;
       background-position: center center;
