--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -2,7 +2,7 @@
 
 <main class="page page__homepage">
   <section class="hero">
-    <h1>Search The Largest Database of Hacker Films Online</h1>
+    <h1>Browse The Largest Database of Hacker Films Online</h1>
     <form class="hero__form" method="get" action="/">
       <input type="text" name="q" class="hero__form__input" placeholder="Search..." value="<%- query -%>" />
       <button class="hero__form__button">Search</button>
